Closed Bug 159014 Opened 23 years ago Closed 23 years ago

Autoscroll when selecting text doesn't always work when cursor leaves view

Categories

(Core Graveyard :: Embedding: Mac, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0.1

People

(Reporter: ccarlen, Assigned: ccarlen)

Details

(Keywords: topembed)

Attachments

(1 file, 2 obsolete files)

This shows up if you drag-select and move the cursor out through the bottom of the view. What's really odd is that the bug doesn't show if you leave the bottom and there's a horizontal scrollbar across the bottom. The reason I think it's happpening is that the tracking depends on LPane::AdjustMouseSelf() getting called. When the cursor leaves the LPane, PowerPlant no longer calls AdjustMouseSelf(). Patch comming up.
Attached patch -u4 diff (obsolete) — Splinter Review
Actual diff. Lots of whitespace changes, detabbed the whole file. Don't look.
Attached patch -w diff for review (obsolete) — Splinter Review
Review this one. Pink, Simon?
Nominating topembed.
Status: NEW → ASSIGNED
Keywords: topembed
Target Milestone: --- → mozilla1.0.1
Comment on attachment 92504 [details] [diff] [review] -w diff for review r=pink
Attachment #92504 - Flags: review+
Comment on attachment 92504 [details] [diff] [review] -w diff for review sr=sfraser Does this logic work correctly when your mouse leavese the frontmost window, but passes over another window whichis behind it?
Attachment #92504 - Flags: superreview+
Comment on attachment 92504 [details] [diff] [review] -w diff for review a=asa (on behalf of drivers) for checkin to 1.1
Attachment #92504 - Flags: approval+
Attached patch better patchSplinter Review
It was pointed out that the current patch broke click-and-hold context menus. Also, the assumption that the top commander was the right thing to which to add the attachment was right for PPEmbed but not other PowerPlant apps. The new patch works by sending null events into the event sink. Turns out, the Mac widget code depends on getting null events to maintain mouse & cursor state.
Attachment #92503 - Attachment is obsolete: true
Attachment #92504 - Attachment is obsolete: true
latest patch WFM
Pink, Simon, Can I get r=/sr= on latest patch?
Comment on attachment 92684 [details] [diff] [review] better patch r=pink
Attachment #92684 - Flags: review+
Comment on attachment 92684 [details] [diff] [review] better patch sr=sfraser
Attachment #92684 - Flags: superreview+
Comment on attachment 92684 [details] [diff] [review] better patch approval for branch granted; change mozilla1.0.1+ to fixed1.0.1 when checked in.
Attachment #92684 - Flags: approval+
Fix checked into 1.0.1 branch. Still needs a= for trunk so leaving open.
a=chofmann for the trunk
Checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
to Dharma for verification
QA Contact: mdunn → dsirnapalli
-- verified on latest branch(2002-10-09-05-1.0) and latest trunk(2002-10-10-08-trunk) of PPEmbed. Works fine. Marking the bug verified.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: