Bug 159014 - Autoscroll doesn't work when cursor leaves the view. nullEvents need to be sent to the event sink. r=pink/sr=sfraser/a=rjesup